--- a/src/widget/widget_list.html
+++ b/src/widget/widget_list.html
@@ -1,4 +1,4 @@
-<!-- begin widget_edit_list.html -->
+<!-- begin widget_list.html -->
 
 <div class="panel box-round">
   <div class="panel-title" style="display:table; padding:0px">
@@ -36,4 +36,4 @@
   </div>
 </div>
 
-<!-- end widget_edit_list.html -->
+<!-- end widget_list.html -->
