--- a/src/theme/blue-max/template.html
+++ b/src/theme/blue-max/template.html
@@ -41,7 +41,7 @@ ${site.title}</title>
     </div>
     <div class="span-6 last" style="border-left:1px solid #eee;padding:6px 6px 6px 16px">
       #for $widget in $widgets
-        $widget.render($widget.widget_model)
+        $show_widget($widget)
       #end for
     </div>
     <div class="span-24 last" style="background-color:#E5ECF1;padding:6px;text-align:center">
