--- a/src/theme/simple/__blog.main.html
+++ b/src/theme/simple/__blog.main.html
@@ -4,7 +4,7 @@
   <div>
     <h3><a href="{post.post_url}">${post.post_title}</a></h3>
     <p><a href="#">Category</a>, published at ${post.post_date}</p>
-    ${post.post_content}
+    ${post.post_content__raw__}
   </div>
   #end for
 </div>
