update theme 'default', remove 'simple'

--- a/src/theme/default/template.html
+++ b/src/theme/default/template.html
@@ -8,8 +8,8 @@
 <!--[if lt IE 8]>
 	<link rel="stylesheet" href="/static/css/blueprint/ie.css" type="text/css" media="screen, projection">
 <![endif]-->
-<link rel="stylesheet" href="/${app}/static/app.css" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="/theme/static/default/custom.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="/${app}/static/css/app.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="/theme/default/static/custom.css" type="text/css" media="screen, projection">
 ${__header____raw__}
 </head>
 <body>
