--- a/src/theme/default/template.html
+++ b/src/theme/default/template.html
@@ -40,6 +40,7 @@ ${__header____raw__}
     </div>
     <div class="span-6 last">
 #raw
+      ${__bar0____raw__}
       #for $widget in $widgets
         $show_widget($widget)
       #end for
