--- a/src/theme/default/template.html
+++ b/src/theme/default/template.html
@@ -3,13 +3,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>${title}</title>
-<link rel="stylesheet" href="/static/css/blueprint/screen.css" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="/static/css/blueprint/print.css" type="text/css" media="print">
+<link rel="stylesheet" href="/static/css/blueprint/screen.css" type="text/css" media="screen, projection"/>
+<link rel="stylesheet" href="/static/css/blueprint/print.css" type="text/css" media="print"/>
 <!--[if lt IE 8]>
-	<link rel="stylesheet" href="/static/css/blueprint/ie.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="/static/css/blueprint/ie.css" type="text/css" media="screen, projection"/>
 <![endif]-->
-<link rel="stylesheet" href="/${app}/static/css/app.css" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="/theme/default/static/custom.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="/${app}/static/css/app.css" type="text/css" media="screen, projection"/>
+<link rel="stylesheet" href="/theme/default/static/custom.css" type="text/css" media="screen, projection"/>
 ${__header____raw__}
 </head>
 <body>
